# VINS-Fusion-Understood

./: .gitignore  README.md
camera_models/: CMakeLists.txt
config/: vins_rviz_config.rviz
config/realsense_d435i_wgh/: left.yaml  realsense_stereo_imu_config.yaml  right.yaml
config/vi_car/: vi_car.yaml
global_fusion/src/: globalOptNode.cpp
vins_estimator/: CMakeLists.txt
vins_estimator/launch/: vins_rviz.launch
vins_estimator/model/: model_gray.param
vins_estimator/src/: KITTIGPSTest.cpp  KITTIOdomTest.cpp  rosNodeTest.cpp
vins_estimator/src/estimator/: estimator.cpp  estimator.h  feature_manager.cpp  feature_manager.h  parameters.cpp  parameters.h
vins_estimator/src/factor/: imu_factor.h  initial_bias_factor.h  initial_pose_factor.h  integration_base.h  marginalization_factor.cpp  marginalization_factor.h  pose_local_parameterization.h  pose_manifold.cpp  projectionOneFrameTwoCamFactor.cpp  projectionOneFrameTwoCamFactor.h  projectionTwoFrameOneCamFactor.cpp  projectionTwoFrameOneCamFactor.h  projectionTwoFrameTwoCamFactor.cpp  projectionTwoFrameTwoCamFactor.h  projection_factor.cpp  projection_factor.h
vins_estimator/src/featureTracker/: feature_tracker.cpp  feature_tracker.h
vins_estimator/src/initial/: initial_alignment.cpp  initial_alignment.h  initial_ex_rotation.cpp  initial_ex_rotation.h  initial_sfm.cpp  initial_sfm.h  solve_5pts.cpp  solve_5pts.h
vins_estimator/src/ros_visualize/: CameraPoseVisualization.cpp  CameraPoseVisualization.h  RosVisualization.cpp
vins_estimator/src/ui_pangolin/: ui_window.cpp  ui_window.h  ui_window_impl.cpp  ui_window_impl.h
vins_estimator/src/utility/: common.h  sensor_type.h  tic_toc.h  utility.h
vins_estimator/src/utility_ros/: RosVisualization.cpp  RosVisualization.h
